fix z-index of move popup so it doesnt conflict with emblem

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -52,7 +52,7 @@ body {
 
 .desktop .move-popup {
     position: absolute;
-    z-index: 2;
+    z-index: 1004;
     top: -75px;
     width: 380px;
     height: 75px;
